--- a/labefood-rappi4/package.json
+++ b/labefood-rappi4/package.json
@@ -10,13 +10,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@trendyol-js/react-carousel": "^3.0.0",
     "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
+    "pure-react-carousel": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simply-carousel": "^8.3.5",
+    "react-slick": "^0.29.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
